# modules/product/routes.go
@@ -11,7 +11,9 @@ func RegisterRoutes(router *gin.RouterGroup, h *handler.CatalogHandler) {
 	catalogRoutes := router.Group("product")
 	{
 		catalogRoutes.GET("/list", h.GetProductList)
+		catalogRoutes.GET("/market/analytics", h.GetMarketAnalytics)
 		catalogRoutes.GET("/:id", h.GetProduct)
+		catalogRoutes.GET("/:id/analytics", h.GetPriceAnalytics)
 	}
 }
 
